<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.senai.jogodavelha.activity.MainActivity">
    <item
        android:id="@+id/menu_resetar"
        android:title="@string/resetar"
        android:icon="@android:drawable/ic_menu_revert"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_inicio"
        android:title="@string/tela_inicial"
        android:icon="@android:drawable/ic_media_previous"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_preference"
        android:title="@string/preferencias"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="always" />

</menu>