<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".fragment.FragmentJogo">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        android:id="@+id/idPai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:id="@+id/jogador1"
            android:layout_weight="8"
            android:text="@string/jogador1"
            android:padding="10dp"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/placar1"
            android:padding="10dp"
            android:text="@string/placar1"
            android:layout_height="wrap_content">

        </TextView>
    </LinearLayout>

    <View
        app:layout_constraintTop_toBottomOf="@+id/idPai"
        app:layout_constraintLeft_toRightOf="@+id/idPai"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/vermelho_escuro"
        />

    <LinearLayout

        android:id="@+id/id2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPai">

        <TextView
            android:id="@+id/jogador2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:padding="10dp"
            android:text="@string/jogador2"></TextView>

        <TextView
            android:id="@+id/placar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/placar2"></TextView>

    </LinearLayout>

    <View
        app:layout_constraintTop_toBottomOf="@+id/id2"
        app:layout_constraintLeft_toRightOf="@+id/id2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/vermelho_escuro"
        />
    <LinearLayout

        android:id="@+id/id3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id2">

        <TextView
            android:id="@+id/velha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:padding="10dp"
            android:text="@string/empate"></TextView>

        <TextView
            android:id="@+id/placarVelha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placarVelha"
            android:padding="10dp"></TextView>

    </LinearLayout>

    <TableLayout
        app:layout_constraintTop_toBottomOf="@+id/id3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <Button
                android:textSize="50sp"
                android:layout_margin="5dp"
                android:id="@+id/bt00"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                ></Button>

            <Button
                android:textColor="@color/black"
                android:textSize="50sp"
                android:layout_margin="5dp"
                android:id="@+id/bt01"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                ></Button>

            <Button
                android:textColor="@color/black"
                android:textSize="50sp"
                android:layout_margin="5dp"
                android:id="@+id/bt02"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                ></Button>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <Button
                android:textColor="@color/black"
                android:textSize="50sp"
                android:layout_margin="5dp"
                android:id="@+id/bt10"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                ></Button>

            <Button
                android:textColor="@color/black"
                android:textSize="50sp"
                android:layout_margin="5dp"
                android:id="@+id/bt11"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                ></Button>

            <Button
                android:textColor="@color/black"
                android:textSize="50sp"
                android:layout_margin="5dp"
                android:id="@+id/bt12"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                ></Button>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <Button
                android:textColor="@color/black"
                android:textSize="50sp"
                android:layout_margin="5dp"
                android:id="@+id/bt20"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                ></Button>

            <Button
                android:textColor="@color/black"
                android:textSize="50sp"
                android:layout_margin="5dp"
                android:id="@+id/bt21"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                ></Button>

            <Button
                android:textColor="@color/black"
                android:textSize="50sp"
                android:layout_margin="5dp"
                android:id="@+id/bt22"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                ></Button>

        </TableRow>

    </TableLayout>







</androidx.constraintlayout.widget.ConstraintLayout>